# Logger.cpp

./: CMakeLists.txt  ConsoleColor.hpp  Logger.cpp  Logger.hpp  Logger.tpp  README.md
Includes/: Logger.hpp
tests/: CMakeLists.txt  tests.cpp
